--- a/apollo-federation/cli/Cargo.toml
+++ b/apollo-federation/cli/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 apollo-compiler.workspace = true
 apollo-federation = { path = ".." }
 clap = { version = "4.5.1", features = ["derive"] }
+tracing = "0.1.37"
