--- a/apollo-router/Cargo.toml
+++ b/apollo-router/Cargo.toml
@@ -190,8 +190,8 @@ regex = "1.10.3"
 reqwest.workspace = true
 
 # note: this dependency should _always_ be pinned, prefix the version with an `=`
-router-bridge = "=0.5.27+v2.8.1"
-
+#router-bridge = "=0.5.27+v2.8.1"
+router-bridge = { git = "https://github.com/sushant3524/federation-rs.git", branch = "ignore-validation-checks" }
 rust-embed = { version = "8.2.0", features = ["include-exclude"] }
 rustls = "0.21.11"
 rustls-native-certs = "0.6.3"
